# TranslationMethods

AutomaticTranslatorGenering/: CPP_Grammar.g4  Run.java  ax.in  input.in
RecursiveParsing/: CMakeLists.txt  lexicalAnalyzer.cpp  lexicalAnalyzer.h  main.cpp  parser.cpp  parser.h  statement.txt
